# shape-shifter

./: Cargo.toml  README.md  flake.nix
.github/workflows/: dev.yml  release.yaml
src/: game.rs  main.rs
src/game/: exit.rs  ingame.rs  menu.rs  settings.rs
src/game/ingame/: battle.rs  upgrade.rs
wasm/: index.html
