[package]
name = "shape-shifter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["wayland"] }
bevy-inspector-egui = { version = "0.33.1", optional = true }
rand = "0.8.5" # rand 0.9.1 is not wasm ready?

[features]
inspect = ["dep:bevy-inspector-egui"]

[profile.release]
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
